# LUMINARK

./: .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES.md  ALL_ENHANCEMENTS_COMPLETE.md  BUILD_COMPLETE_SUMMARY.md  CLAUDE_DEEPAGENT_ANALYSIS.md  COMPETITIVE_ANALYSIS.md  COMPLETE_SYSTEM_OVERVIEW.md  COMPLETION_SUMMARY.md  CONCEPTUAL_UPGRADE_ANALYSIS.md  CONTRIBUTING.md  Compensation_Agreement_Template.md  DEEPAGENT_INTEGRATION.md  DEPLOYMENT.md  DEPLOY_NOW.md  DEPLOY_SITE.bat  DEPLOY_V5_NOW.bat  Dockerfile  FINAL_TIMESTAMP_TODO.md  INVERSION_PRINCIPLE.md.ots  LICENSE  LUMINARK_DATA_INTEGRATION_GUIDE.md  LUMINARK_REAL_DATASETS_SUMMARY.md  LUMINARK_V5_COMPLETE_SUMMARY.md  LUMINARK_V5_DEPLOYMENT_READY.md  LUMINARK_V5_UPGRADE_GUIDE.md  LUMINARK_V6_PROFESSIONAL_SUMMARY.md  MANIFEST.in  MASTER_INTEGRATION_SUMMARY.md  MYCELIAL_SENSORY_SYSTEM.md  NOTEBOOKLM_INTEGRATION.md  ORACLE_VOICE_COMPLETE_SUMMARY.md  ORACLE_VOICE_INTEGRATION_GUIDE.md  PERSPECTIVE_MODULATOR_ADDED.md  POST_RESTRUCTURE_PLAN.md  PREPARE_DEPLOY.bat  PROJECT_SUMMARY.md  QUANTUM_PREDICTOR.md  QUICK_START.bat  (+90 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
DEPLOY_ME_NOW/: index.html  luminark_personal_datasets.json
LUMINARK_AI/: bio_defense.py  main_model.py  nam_logic.py  physics_engine.py  yunus_safety.py
LUMINARK_ARCHIVE/: temp_analysis.docx
LUMINARK_DOCS/: ARCHITECTURE.md  BRIDGE_THE_GAP_SIMPLE_GUIDE.md  COMPLETE_INTEGRATION_SUMMARY.md  FRAMEWORK_NAMING_OFFICIAL.md  IMPROVEMENTS_COMPLETE.md  INVERSION_PRINCIPLE.md  INVERSION_RESTORATION_SUMMARY.md  SAFETY_TESTING_REPORT.md  SAP_COACH_LAUNCH_GUIDE.md  SAP_NAMING_UPDATE.md  SIMPLE_3_STEP_ROADMAP.md  SYSTEM_OVERVIEW.md
MARKETING/: VIRAL_VIDEO_SCRIPT.md
NIKKI_TASK_PACKAGE/: INSTRUCTIONS_FOR_NIKKI.txt
_ARCHIVE/: sap_deep_assessment.html  sap_free_assessment.html
api/: chat.py  index.py  overwatch.py
checkpoints/: demo_save.pt  model_epoch10.pkl
chrome_extension/: content.js  manifest.json  popup.html  popup.js
cli/: __init__.py  commands.py
data/: biofeedback_demo.json
docs/: COMPLEMENTARY_FEATURES.md  Copyright_Filing_Checklist.md  DEPLOY_NOW.md  EVERYTHING_INTEGRATED.md  FINAL_INTEGRATION_NANOGPT.md  NDA_Rick_Nikki.md  SAP_V4_GUIDE.md  SEND_TO_NIKKI.md  SESSION_COMPLEMENTARY_FEATURES.md  YOUTUBE_SCRIPTS_NIKKI.md
examples/: ai_wrapper.py  checkpoint_and_scheduler_demo.py  deepagent_qa_demo.py  demo.py  sap_v4_demo.py  (+6 more)
(+194 files in other folders)
